# metrics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  architecture_data.md  architecture_software.md  architecture_technical.md  database.md  glossary.md  processing.md
backend/: CONTRIBUTING.md  Dockerfile  README.md  filebeat.yml  pyproject.toml  setup.py  tasks.py
backend/dev_tools/: log_injector.py  perf_tests_design.md  perf_tests_howto.md  simulator.py  synthetic_data.py
backend/src/: simulator.py  simulator_expected_res.txt  tests.ipynb
backend/src/backend/: __init__.py  constants.py  filebeat.py  main.py
backend/src/backend/business/: agg_kind.py  log_converter.py  period.py  processor.py
backend/src/backend/db/: __init__.py  initializer.py  models.py  persister.py
backend/src/backend/routes/: aggregations.py  echo.py  kpis.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 3c40b9f8c0e8_create_all_first_tables.py  70258089e5b3_add_timestamp_column.py  7190acbf741c_indicators_tables.py  b671607f133b_add_indicators_tables.py  da868e7d2172_add_kpi_values_table.py
backend/src/offspot_metrics_backend/: __about__.py  alembic.ini  constants.py  entrypoint.py  filebeat.py  logging.py  main.py  simulator.py
backend/src/offspot_metrics_backend/business/: agg_kind.py  caddy_log_converter.py  exceptions.py  input_generator.py  log_converter.py  log_data.py  log_watcher.py  period.py  processor.py  reverse_proxy_config.py  schemas.py
backend/src/offspot_metrics_backend/db/: __init__.py  initializer.py  models.py  persister.py
backend/src/offspot_metrics_backend/migrations/: env.py
backend/src/offspot_metrics_backend/routes/: __init__.py  aggregations.py  kpis.py  schemas.py
backend/tests/: conftest.py
backend/tests/unit/: conftest.py
backend/tests/unit/backend/: test_constants.py  test_inheritance.py
backend/tests/unit/business/: conf_missing_packages.yaml  conf_with_warnings.yaml  conftest.py  test_period.py  (+6 more)
(+150 files in other folders)
