[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[dependencies]
runtime = [
    "alembic == 1.11.1",
    "fastapi[all] == 0.95.2",
    "fastapi-pagination == 0.12.4",
    "marshmallow == 3.19.0",
    "marshmallow-sqlalchemy == 0.29.0",
    "python-dateutil == 2.8.2",
    "SQLAlchemy == 2.0.15"
]
test = [
    "coverage == 7.2.7",
    "httpx == 0.24.1",
    "pytest == 7.3.1",
    "pytest-asyncio == 0.21.0",
    "pytest-cov == 4.1.0"
]
qa =  [
    "black == 23.3.0",
    "flake8 == 6.0.0",
    "isort == 5.12.0",
    "pyright == 1.1.317"
]
dev = [
    "ipykernel == 6.23.2",
    "pre-commit == 3.3.2",
]

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests", "../tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode="strict"